[EPMDEDP-10753]: chore: Upgrade nexus to the 3.42.0 version
Set recommended values for nexus java

Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>
Change-Id: Ibf8cbd99ec9eb4b0bdeff88c0caa988cae68b1d1